@@ -794,30 +794,6 @@ Ns_ConnSockContent(Ns_Conn *conn)
     return NULL;
 }
 
-/*
- *----------------------------------------------------------------------
- *
- * Ns_ConnSockContext --
- *
- *      Get the conn-wide context for this sock
- *
- * Results:
- *      The socket-supplied context
- *
- * Side effects:
- *      None
- *
- *----------------------------------------------------------------------
- */
-
-void *
-Ns_ConnSockContext(Ns_Conn *conn)
-{
-    Conn *connPtr = (Conn *) conn;
-
-    return (void *)(connPtr->sockPtr ? connPtr->sockPtr->arg : NULL);
-}
-
 
 /*
  *----------------------------------------------------------------------
@@ -841,31 +817,6 @@ Ns_ConnDriverName(Ns_Conn *conn)
     Conn *connPtr = (Conn *) conn;
 
     return connPtr->drvPtr->name;
-}
-
-
-/*
- *----------------------------------------------------------------------
- *
- * Ns_ConnDriverContext --
- *
- *      Get the context for this driver
- *
- * Results:
- *      The driver-supplied context
- *
- * Side effects:
- *      None
- *
- *----------------------------------------------------------------------
- */
-
-void *
-Ns_ConnDriverContext(Ns_Conn *conn)
-{
-    Conn *connPtr = (Conn *) conn;
-
-    return (void *)(connPtr->drvPtr ? connPtr->drvPtr->arg : NULL);
 }
 
 
